# mcfgthread

./: .drone.yml  .gitignore  .travis.yml  LICENSE  MCFLicense.txt  Makefile.am  README  README.md  build_i686.sh  build_i686_debug.sh  build_i686_release.sh  build_it.sh  build_x86_64.sh  build_x86_64_debug.sh  build_x86_64_release.sh  check_includes.sh  configure.ac
debug/mingw32/include/mcfgthread/: gthread.h  mcfcrt.h
debug/mingw32/include/mcfgthread/env/: _atexit_queue.h  _avl_tree_inl.h  _c11thread_inl.h  _crtdef.h  _gthread_inl.h  _nt_timeout.h  _seh_top.h  avl_tree.h  c11thread.h  clocks.h  crt_module.h  gthread.h  heap.h  inline_mem.h  mcfwin.h  mutex.h  thread.h  tls.h  xassert.h
debug/mingw32/include/mcfgthread/ext/: assert.h  wcpcpy.h
debug/mingw64/include/mcfgthread/: c11thread.h  mcfcrt.h
debug/mingw64/include/mcfgthread/env/: _atexit_queue.h  _c11thread_inl.h  _crtdef.h  _gthread_inl.h  _mopthread.h  _nt_timeout.h  _seh_top.h  _tls_common.h  avl_tree.h  c11thread.h  clocks.h  condition_variable.h  crt_module.h  gthread.h  heap.h  inline_mem.h  mutex.h  once_flag.h  pp.h  thread.h  tls.h  xassert.h
debug/mingw64/include/mcfgthread/ext/: assert.h  itow.h
debug/mingw64/include/mcfgthread/pre/: module.h
i686-w64-mingw32/include/mcfgthread/: clocks.h  thread.h
i686-w64-mingw32/include/mcfgthread/env/: avl_tree.h  gthread.h
i686-w64-mingw32/lib/: libmcfgthread.la
release/mingw32/include/mcfgthread/: c11thread.h  gthread.h  mcfcrt.h
release/mingw32/include/mcfgthread/env/: _atexit_queue.h  _avl_tree_inl.h  _c11thread_inl.h  _crtdef.h  _gthread_inl.h  _mopthread.h  _nt_timeout.h  _seh_top.h  avl_tree.h  bail.h  c11thread.h  clocks.h  condition_variable.h  crt_module.h  expect.h  gthread.h  inline_mem.h  mutex.h  once_flag.h  pp.h  thread.h  thread_env.h  tls.h  xassert.h
release/mingw32/include/mcfgthread/ext/: assert.h  expect.h  itow.h  pp.h  wcpcpy.h
release/mingw32/include/mcfgthread/pre/: module.h
release/mingw32/lib/: libmcfgthread.la
release/mingw64/include/mcfgthread/: c11thread.h  mcfcrt.h
release/mingw64/include/mcfgthread/env/: _atexit_queue.h  _c11thread_inl.h  _crtdef.h  _eh_top.h  _gthread_inl.h  _mopthread.h  _nt_timeout.h  _seh_top.h  avl_tree.h  bail.h  c11thread.h  condition_variable.h  crt_assert.h  gthread.h  heap.h  inline_mem.h  libcxxthread.h  mcfwin.h  module.h  mutex.h  once_flag.h  thread.h  thread_env.h
release/mingw64/include/mcfgthread/ext/: assert.h  itow.h  pp.h  wcpcpy.h
release/mingw64/lib/: libmcfgthread.la
src/: dll_main.c  dll_startup.c  libcxxthread.h  mcfcrt.c  mcfcrt.h
src/env/: _c11thread_inl.h  _crtdef.h  _eh_top.c  _eh_top.h  _gthread_inl.h  _mopthread.c  _mopthread.h  _nt_timeout.c  _nt_timeout.h  _seh_top.c  _seh_top.h  _tls_common.c  _tls_common.h  avl_tree.c  avl_tree.h  bail.c  bail.h  c11thread.c  c11thread.h  clocks.c  clocks.h  condition_variable.c  condition_variable.h  crt_assert.c  crt_module.c  crt_module.h  crtassert.c  gthread.c  gthread.h  heap.c  heap.h  inline_mem.h  libcxxthread.c  libcxxthread.h  mcfwin.h  module.c  module.h  mutex.c  mutex.h  once_flag.c  (+10 more)
src/ext/: assert.c  assert.h  expect.h  itow.c  itow.h  wcpcpy.c  wcpcpy.h
src/pre/: module.c
test/: build_test.sh  join_initial_thread.c  once.c  ping_pong.cpp  test.c
wiki/: Benchmarking.md  Differences-between-GNU,-C99-and-C---`inline`.md  Home.md  Manual.md  Pseudo-Code.md  Stop-using-`-fnoexceptions`.md  _Footer.md  _Sidebar.md  c11thread.h.md  env-avl_tree.h.md  env-bail.h.md  env-c11thread.h.md  env-clocks.h.md  env-condition_variable.h.md  env-crt_module.h.md  env-expect.h.md  env-gthread.h.md  env-heap.h.md  env-inline_mem.h.md  env-mutex.h.md  env-once_flag.h.md  env-pp.h.md  env-thread.h.md  env-tls.h.md  env-xassert.h.md  ext-itow.h.md  ext-wcpcpy.h.md  gthread.h.md
x86_64-w64-mingw32/include/mcfgthread/: condition_variable.h  gthread.h
x86_64-w64-mingw32/include/mcfgthread/env/: mutex.h
x86_64-w64-mingw32/lib/: libmcfgthread.la
